--- a/index.html
+++ b/index.html
@@ -3,114 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenClaw - 开源 AI 助手平台</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>OpenClaw 测试仓库</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background: #f5f5f5;
+        }
+        h1 { color: #333; }
+        .links {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 15px;
+            margin-top: 30px;
+        }
+        a {
+            display: block;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            text-decoration: none;
+            color: #0366d6;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: transform 0.2s;
+        }
+        a:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <aside class="sidebar">
-            <div class="logo">
-                <h1>OpenClaw</h1>
-                <p>开源 AI 助手平台</p>
-            </div>
-            <nav class="nav-menu">
-                <ul>
-                    <li><a href="index.html">首页</a></li>
-                    <li><a href="installation.html">安装指南</a></li>
-                    <li><a href="getting-started.html">快速开始</a></li>
-                    <li class="nav-group">
-                        <span>核心命令</span>
-                        <ul>
-                            <li><a href="commands/gateway.html">gateway</a></li>
-                            <li><a href="commands/configure.html">configure/setup</a></li>
-                            <li><a href="commands/message.html">message</a></li>
-                            <li><a href="commands/channels.html">channels</a></li>
-                            <li><a href="commands/agents.html">agents</a></li>
-                            <li><a href="commands/models.html">models</a></li>
-                            <li><a href="commands/status.html">status</a></li>
-                            <li><a href="commands/cron.html">cron</a></li>
-                            <li><a href="commands/browser.html">browser</a></li>
-                            <li><a href="commands/nodes.html">nodes</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-group">
-                        <span>其他命令</span>
-                        <ul>
-                            <li><a href="commands/agent.html">agent</a></li>
-                            <li><a href="commands/security.html">security</a></li>
-                            <li><a href="commands/skills.html">skills</a></li>
-                            <li><a href="commands/system.html">system</a></li>
-                            <li><a href="commands/update.html">update</a></li>
-                            <li><a href="commands/all-commands.html">所有命令</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="troubleshooting.html">故障排除</a></li>
-                    <li><a href="https://docs.openclaw.ai" target="_blank">官方文档</a></li>
-                    <li><a href="https://github.com/openclaw/openclaw" target="_blank">GitHub 仓库</a></li>
-                </ul>
-            </nav>
-        </aside>
-        <main class="main-content">
-            <header class="page-header">
-                <h1>OpenClaw - 开源 AI 助手平台</h1>
-            </header>
-            <div class="content">
-                <section class="hero">
-                    <h2>让 AI 助手融入你的聊天应用</h2>
-                    <p>OpenClaw 是一个开源的 AI 助手框架，可以无缝集成到各种消息平台中，包括 Telegram、WhatsApp、Feishu、Discord 等。</p>
-                    <div class="cta-buttons">
-                        <a href="installation.html" class="btn primary">开始安装</a>
-                        <a href="getting-started.html" class="btn secondary">快速入门</a>
-                    </div>
-                </section>
-
-                <section class="features">
-                    <h2>主要特性</h2>
-                    <div class="feature-grid">
-                        <div class="feature-card">
-                            <h3>多平台支持</h3>
-                            <p>支持 Telegram、WhatsApp、Feishu、Discord、Slack 等主流消息平台</p>
-                        </div>
-                        <div class="feature-card">
-                            <h3>本地运行</h3>
-                            <p>完全在本地运行，保护你的隐私和数据安全</p>
-                        </div>
-                        <div class="feature-card">
-                            <h3>强大的命令系统</h3>
-                            <p>丰富的命令行工具，支持文件操作、浏览器控制、设备管理等</p>
-                        </div>
-                        <div class="feature-card">
-                            <h3>可扩展架构</h3>
-                            <p>通过插件和技能系统轻松扩展功能</p>
-                        </div>
-                    </div>
-                </section>
-
-                <section class="quick-start">
-                    <h2>快速开始</h2>
-                    <pre><code># 安装 OpenClaw
-npm install -g openclaw
-
-# 初始化配置
-openclaw setup
-
-# 启动服务
-openclaw gateway start</code></pre>
-                    <p>详细安装和配置指南请查看 <a href="installation.html">安装指南</a> 页面。</p>
-                </section>
-
-                <section class="resources">
-                    <h2>资源链接</h2>
-                    <ul>
-                        <li><a href="https://docs.openclaw.ai" target="_blank">官方文档</a></li>
-                        <li><a href="https://github.com/openclaw/openclaw" target="_blank">GitHub 仓库</a></li>
-                        <li><a href="https://discord.com/invite/clawd" target="_blank">Discord 社区</a></li>
-                    </ul>
-                </section>
-            </div>
-        </main>
+    <h1>🧪 OpenClaw 测试仓库</h1>
+    <p>这是一个通过 OpenClaw 创建的测试仓库。以下是可用的页面：</p>
+    
+    <div class="links">
+        <a href="agents.html">Agents 管理</a>
+        <a href="browser.html">浏览器控制</a>
+        <a href="channels.html">频道配置</a>
+        <a href="config.html">配置管理</a>
+        <a href="cron.html">定时任务</a>
+        <a href="gateway.html">网关设置</a>
+        <a href="memory.html">记忆管理</a>
+        <a href="message.html">消息发送</a>
+        <a href="nodes.html">节点管理</a>
+        <a href="status.html">状态查看</a>
+        <a href="tools.html">工具列表</a>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
