Fix sidebar links to match existing pages

--- a/getting-started.html
+++ b/getting-started.html
@@ -19,35 +19,33 @@
                         <li><a href="index.html">什么是 OpenClaw</a></li>
                         <li><a href="getting-started.html" class="active">入门指南</a></li>
                         <li><a href="installation.html">安装指南</a></li>
-                        <li><a href="configuration.html">配置指南</a></li>
                     </ul>
                 </div>
                 <div class="nav-section">
                     <h2>核心命令</h2>
                     <ul class="nav-links">
                         <li><a href="gateway.html">gateway</a></li>
-                        <li><a href="agent.html">agent</a></li>
-                        <li><a href="message.html">message</a></li>
-                        <li><a href="channels.html">channels</a></li>
                         <li><a href="config.html">config</a></li>
                         <li><a href="setup.html">setup</a></li>
-                        <li><a href="status.html">status</a></li>
+                        <li><a href="message.html">message</a></li>
+                        <li><a href="channels.html">channels</a></li>
                     </ul>
                 </div>
                 <div class="nav-section">
                     <h2>高级功能</h2>
                     <ul class="nav-links">
+                        <li><a href="agents.html">agents</a></li>
                         <li><a href="cron.html">cron</a></li>
+                        <li><a href="browser.html">browser</a></li>
                         <li><a href="skills.html">skills</a></li>
                         <li><a href="models.html">models</a></li>
-                        <li><a href="nodes.html">nodes</a></li>
-                        <li><a href="browser.html">browser</a></li>
                     </ul>
                 </div>
                 <div class="nav-section">
-                    <h2>维护与故障排除</h2>
+                    <h2>系统管理</h2>
                     <ul class="nav-links">
-                        <li><a href="doctor.html">doctor</a></li>
+                        <li><a href="status.html">status</a></li>
+                        <li><a href="health.html">health</a></li>
                         <li><a href="logs.html">logs</a></li>
                         <li><a href="security.html">security</a></li>
                         <li><a href="update.html">update</a></li>
