Fix sidebar to match index.html exactly

--- a/getting-started.html
+++ b/getting-started.html
@@ -14,10 +14,10 @@
             </div>
             <nav>
                 <div class="nav-section">
-                    <h2>开始使用</h2>
+                    <h2>入门指南</h2>
                     <ul class="nav-links">
                         <li><a href="index.html">什么是 OpenClaw</a></li>
-                        <li><a href="getting-started.html" class="active">入门指南</a></li>
+                        <li><a href="getting-started.html" class="active">快速开始</a></li>
                         <li><a href="installation.html">安装指南</a></li>
                     </ul>
                 </div>
